[gd_scene load_steps=6 format=3 uid="uid://m5xxgibw6n6i"]

[ext_resource type="Texture2D" uid="uid://ba28nvkk4dirn" path="res://Assets/Track.png" id="1_e4cqi"]
[ext_resource type="PackedScene" uid="uid://btre0xf6ager1" path="res://UI/ProgressPreview.tscn" id="2_isvq5"]
[ext_resource type="Script" path="res://UI/MainMenuButtons.gd" id="2_mr26y"]
[ext_resource type="Script" path="res://UI/LevelSelect.gd" id="3_jnj1n"]
[ext_resource type="Texture2D" uid="uid://c0qu1tcwyrl8o" path="res://Assets/river.png" id="4_1ytmm"]

[node name="MainMenu" type="CanvasLayer"]

[node name="Track" type="Sprite2D" parent="."]
texture = ExtResource("1_e4cqi")
centered = false
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
offset_left = 33.0
offset_top = 34.0
offset_right = 1881.0
offset_bottom = 1045.0

[node name="Label" type="Label" parent="."]
offset_left = 34.0
offset_top = 39.0
offset_right = 1880.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 125
text = "This is the Main Menu!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Preview" parent="." instance=ExtResource("2_isvq5")]
visible = false

[node name="LevelSelect" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_jnj1n")

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect"]
offset_left = 756.0
offset_top = 436.0
offset_right = 1816.0
offset_bottom = 706.0
theme_override_constants/separation = 100

[node name="Icon01" type="TextureButton" parent="LevelSelect/HBoxContainer"]
custom_minimum_size = Vector2(480, 270)
layout_mode = 2
texture_normal = ExtResource("1_e4cqi")
ignore_texture_size = true
stretch_mode = 4

[node name="Icon02" type="TextureButton" parent="LevelSelect/HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
texture_normal = ExtResource("4_1ytmm")
ignore_texture_size = true
stretch_mode = 4

[node name="Label01" type="Label" parent="LevelSelect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 173.0
offset_right = 97.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Level 01"

[node name="label02" type="Label" parent="LevelSelect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 548.0
offset_top = 173.0
offset_right = 690.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Level 02"

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -670.0
offset_top = -376.0
offset_right = -320.0
offset_bottom = 574.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="NewGameButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="ContinueButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
disabled = true
text = "Continue"
script = ExtResource("2_mr26y")

[node name="OptionsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="LevelSelect/HBoxContainer/Icon01" to="LevelSelect" method="_on_icon_01_pressed"]
[connection signal="pressed" from="LevelSelect/HBoxContainer/Icon02" to="LevelSelect" method="_on_icon_02_pressed"]
[connection signal="pressed" from="HBoxContainer/NewGameButton" to="HBoxContainer/ContinueButton" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ContinueButton" to="HBoxContainer/ContinueButton" method="_on_continue_button_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsButton" to="HBoxContainer/ContinueButton" method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="HBoxContainer/ContinueButton" method="_on_quit_button_pressed"]
